--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:backend": "cd backend && npm run dev",
     "dev:webapp": "cd webapp && npm run dev",
     "build": "cd backend && npm install && npm run build",
-    "start": "cd backend && npx prisma migrate deploy && npx prisma db seed && npm start",
+    "start": "cd backend && npm start",
     "db:setup": "cd backend && npm run prisma:generate && npm run db:push && npm run db:seed"
   },
   "keywords": ["telegram", "bot", "webapp", "booking", "beauty", "manicure", "pedicure"],
